<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/flore_denis_bottomimageView"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:scaleType="centerCrop"
        android:src="@drawable/wave__2_"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:layout_marginBottom="2dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/flore_denis_bottomimageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            style="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/red"
            android:textSize="30sp"
            android:id="@+id/flore_denis_txtLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginTitle" />

        <TextView
            style="@style/TextAppearance.AppCompat.Body1"
            android:id="@+id/flore_denis_txtLoginSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="@string/enter_your_email_and_password" />

        <EditText
            android:autofillHints="@string/email"
            android:id="@+id/flore_denis_emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="20sp"
            android:hint="@string/email"
            android:layout_marginTop="32dp"
            android:inputType="textEmailAddress" />

        <EditText
            android:autofillHints="@string/password"
            android:id="@+id/flore_denis_passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/flore_denis_loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/login" />

        <TextView
            android:id="@+id/flore_denis_txtSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="16dp"
            android:text="@string/signup" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>