<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginIntro">


    <TextView
        android:id="@+id/flore_denis_txtLoginSubHeader"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subHeader"
        android:textAlignment="center"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.561"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <TextView
        android:id="@+id/flore_denis_txtLogindHeader"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:textSize="30dp"
        android:fontFamily="sans-serif-black"
        android:layout_height="wrap_content"
        android:text="@string/txtHeader"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/flore_denis_txtLoginSubHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/avatarImage"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/undraw_questions_re_1fy7__1_"
        app:layout_constraintBottom_toTopOf="@+id/flore_denis_txtLogindHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnGetStarted"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:textSize="20dp"
        android:layout_marginTop="69dp"
        android:text="@string/getStarted"
        app:layout_constraintEnd_toEndOf="@+id/flore_denis_txtLoginSubHeader"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/flore_denis_txtLoginSubHeader"
        app:layout_constraintTop_toBottomOf="@+id/flore_denis_txtLoginSubHeader" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:scaleType="centerCrop"
        android:src="@drawable/wave__2_"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>